syntax = "proto3";
option go_package = "github.com/letsencrypt/boulder/publisher/proto";

service Publisher {
  rpc SubmitToSingleCTWithResult(Request) returns (Result) {}
}

message Request {
  bytes der = 1;
  string LogURL = 2;
  string LogPublicKey = 3;
  bool precert = 4;
}

message Result {
  bytes sct = 1;
}
